# projeto_etl

./: pyproject.toml
tests/: __init__.py  db.json
